Collapsable lists, ordering fixes

--- a/client/main.less
+++ b/client/main.less
@@ -1,6 +1,6 @@
 @import "{}/imports/ui/stylesheets/not-found.less";
 
-.tag-red { background-color: #FFB5B5; }
+.tag-red { background-color: #FF2020; }
 .tag-orange { background-color: #FFD8B5; }
 .tag-yellow { background-color: #FFFAB5; }
 .tag-lime { background-color: #E1FFB5; }
